--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
             </div>
             <div class="Follow">
               <h5>Follow Us</h5>
-              <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> 
+              <a class="twitter-timeline" data-width="300" data-height="200" data-dnt="true" data-theme="dark" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> 
             </div>
           </div>
           <div class="HR"></div>
