--- a/productPage.html
+++ b/productPage.html
@@ -199,9 +199,9 @@
           </div>
         </div>
         <div class="tabs">
-          <button onclick="openCity('Details')">Details</button>
-          <button onclick="openCity('Review')">Review</button>
-          <button onclick="openCity('Custom-tab')">Custom Tab</button>
+          <button onclick="openTab('Details')">Details</button>
+          <button onclick="openTab('Review')">Review</button>
+          <button onclick="openTab('Custom-tab')">Custom Tab</button>
         </div>
 
         <div id="Details" class="product_details">
