--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               />
               <div class="overlay">QuickView</div>
               <p>
-                <a href="#">Women Black Top</a>
+                <a href="productPage.htmlroductPage.html">Women Black Top</a>
                 <span class="rating">
                   <i class="fa fa-star" style="font-size: x-small"></i>
                   <i class="fa fa-star" style="font-size: x-small"></i>
@@ -287,7 +287,7 @@
               />
               <div class="overlay-02">QuickView</div>
               <p>
-                <a href="#">Women Black Top</a>
+                <a href="productPage.html">Women Black Top</a>
                 <span class="rating">
                   <i class="fa fa-star" style="font-size: x-small"></i>
                   <i class="fa fa-star" style="font-size: x-small"></i>
@@ -311,7 +311,7 @@
               />
               <div class="overlay-03">QuickView</div>
               <p>
-                <a href="#">Women Black Top</a>
+                <a href="productPage.html">Women Black Top</a>
                 <span class="rating">
                   <i class="fa fa-star" style="font-size: x-small"></i>
                   <i class="fa fa-star" style="font-size: x-small"></i>
@@ -335,7 +335,7 @@
               />
               <div class="overlay-04">QuickView</div>
               <p>
-                <a href="#">Women Black Top</a>
+                <a href="productPage.html">Women Black Top</a>
                 <span class="rating">
                   <i class="fa fa-star" style="font-size: x-small"></i>
                   <i class="fa fa-star" style="font-size: x-small"></i>
@@ -359,7 +359,7 @@
               />
               <div class="overlay-05">QuickView</div>
               <p>
-                <a href="#">Women Black Top</a>
+                <a href="productPage.html">Women Black Top</a>
                 <span class="rating">
                   <i class="fa fa-star" style="font-size: x-small"></i>
                   <i class="fa fa-star" style="font-size: x-small"></i>
@@ -383,7 +383,7 @@
               />
               <div class="overlay-06">QuickView</div>
               <p>
-                <a href="#">Women Black Top</a>
+                <a href="productPage.html">Women Black Top</a>
                 <span class="rating">
                   <i class="fa fa-star" style="font-size: x-small"></i>
                   <i class="fa fa-star" style="font-size: x-small"></i>
@@ -407,7 +407,7 @@
               />
               <div class="overlay-07">QuickView</div>
               <p>
-                <a href="#">Women Black Top</a>
+                <a href="productPage.html">Women Black Top</a>
                 <span class="rating">
                   <i class="fa fa-star" style="font-size: x-small"></i>
                   <i class="fa fa-star" style="font-size: x-small"></i>
@@ -434,7 +434,7 @@
               </div>
 
               <p>
-                <a href="#">Women Black Top</a>
+                <a href="productPage.html">Women Black Top</a>
                 <span class="rating">
                   <i class="fa fa-star" style="font-size: x-small"></i>
                   <i class="fa fa-star" style="font-size: x-small"></i>
